src/test/ui/feature-gates/feature-gate-debugger-visualizer.stderr
error[E0658]: the `#[debugger_visualizer]` attribute is an experimental feature
  --> $DIR/feature-gate-debugger-visualizer.rs:1:1
   |
LL | #![debugger_visualizer(natvis_file = "auxiliary/debugger-visualizer.natvis")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #95939 <https://github.com/rust-lang/rust/issues/95939> for more information
   = help: add `#![feature(debugger_visualizer)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
