src/test/ui/feature-gates/feature-gate-debugger-visualizer.rs
#![debugger_visualizer(natvis_file = "auxiliary/debugger-visualizer.natvis")] //~ ERROR the `#[debugger_visualizer]` attribute is an experimental feature

fn main() {}
